examples/test/testpolicy16839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16839
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key46: value30
      key37: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value16
          key14: value1
          key43: value24
      podSelector:
        matchLabels:
          key23: value37
